tests/specs/ecosystem/xeaone/server/5_3_2.test
xeaone/server/5.3.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/http@0.216": "jsr:@std/http@0.216.0"
    },
    "jsr": {
      "@std/http@0.216.0": {
        "integrity": "fe1ff331f2b02dd4c96b799da5a156846c663457ab1bcb82f0428a4821726f42"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/cache.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/cors.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/defenders.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/file.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/forwarded.ts:4:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/handle.ts"' has no default export.
import Handle from "./handle.ts";
       ~~~~~~
    at file://<tmpdir>/src/handler.ts:1:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/handler.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/normalize.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/payload.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/handle.ts"' has no default export.
import Handle from "./handle.ts";
       ~~~~~~
    at file://<tmpdir>/src/router.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/router.ts:3:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/session.ts:2:8

TS1192 [ERROR]: Module '"file://<tmpdir>/src/plugin.ts"' has no default export.
import Plugin from "./plugin.ts";
       ~~~~~~
    at file://<tmpdir>/src/socket.ts:2:8

Found 13 errors.

